configure listening port

--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -21,6 +21,7 @@ events {
 }
 
 http {
+  listen          <%= node['nginx']['port'] %>;
   <% if node.recipe?('nginx::naxsi_module') %>
   include       <%= node['nginx']['dir'] %>/naxsi_core.rules;
   <% end %>
