modify listen directive location

--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -21,7 +21,9 @@ events {
 }
 
 http {
-  listen          <%= node['nginx']['port'] %>;
+  server {
+    listen  <%= node['nginx']['port'] %>;
+  }
   <% if node.recipe?('nginx::naxsi_module') %>
   include       <%= node['nginx']['dir'] %>/naxsi_core.rules;
   <% end %>
